--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 attrs==23.2.0
 certifi==2024.2.2
+charset-normalizer==3.3.2
 h11==0.14.0
+icalendar==5.0.12
 idna==3.7
 outcome==1.3.0.post0
 PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+requests==2.31.0
 selenium==4.20.0
+six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 trio==0.25.0
